tests/error/comptime_double_free.bz
function main()
{
	(consteval {
		const p = __builtin_comptime_malloc_type(int32, 1u);
		__builtin_comptime_free(p);
		__builtin_comptime_free(p);
	});
}
